Anthony grab this commit. adam

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<div class="adam">
-    <h4>ADAM</h4>
-</div>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body class="main fight-companions-index">
+    <div class="page-wrapper">
+        <div class="main-content">
+            <h1 class="page-title">Welcome To Fight Companions.  #YeahItsReal</h1>
+            <div class="youtube-embed">
+
+            </div>
+        </div>
+    </div>
+</body>
