COMMITS DAMN YOU

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    <title>Fight Companions.com</title>
 </head>
 <body class="main fight-companions-index">
-    <div class="page-wrapper">
-        <div class="main-content">
-            <h1 class="page-title">Welcome To Fight Companions.  #YeahItsReal</h1>
-            <div class="youtube-embed">
-
-            </div>
+<div class="header">
+    <div class="header-left header-section">
+        <h3>www.fightcompanions.com</h3>
+    </div>
+    <div class="header-center header-section">
+        <div class="logo">
+            <img src="img/punch-logo.png" alt="Fight Companions Logo" width="175"/>
         </div>
     </div>
+    <div class="header-right header-section">
+        <h3>LIVE Fight Companion UFC 207 12.30.16</h3>
+    </div>
+</div>
+<div class="page-wrapper">
+    <div class="main-content">
+        <h1 class="page-title">Welcome To Fight Companions.  #YeahItsReal</h1>
+        <div class="youtube-embed">
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/_ZKW93Yvbp4" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div id="copyright">Fight Companions.com &copy;2016. Stay tuned for more.</div>
+</div>
 </body>
