Changes to homepage.  afabian 123016

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
     <div class="main-content">
         <h1 class="page-title">Welcome To Fight Companions.  #YeahItsReal</h1>
         <div class="youtube-embed">
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/_ZKW93Yvbp4" frameborder="0" allowfullscreen></iframe>
+            <iframe width="1024" height="720" src="https://www.youtube.com/embed/YaNfGQL-eco" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="content">
+            <h3>UFC 207 Fight Companions Participant List</h3>
+            <ul class="list" id="participants">
+                <li>Anthony Davis</li>
+                <li>Adam Fabian</li>
+                <li>Hector Wilkinson</li>
+                <li>Senko Redzic</li>
+            </ul>
         </div>
     </div>
 </div>
