Changes to styling for the main page, structural updates on homepage.  afabian 123016

--- a/index.html
+++ b/index.html
@@ -26,17 +26,32 @@
             <iframe width="1024" height="720" src="https://www.youtube.com/embed/YaNfGQL-eco" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="content">
-            <h3>UFC 207 Fight Companions Participant List</h3>
+            <h2>UFC 207 Fight Companions Participant List</h2>
             <ul class="list" id="participants">
                 <li>Anthony Davis</li>
                 <li>Adam Fabian</li>
                 <li>Hector Wilkinson</li>
                 <li>Senko Redzic</li>
             </ul>
+            <h2>UFC 207 Main Fight Card</h2>
+            <ul class="list" id="main-fights">
+                <li><span class="rank">C</span> Amanda Nunes vs. <span class="rank">#1</span> Ronda Rousey</li>
+                <li><span class="rank">C</span> Dominick Cruz vs. <span class="rank">#5</span> Cody Garbrandt</li>
+                <li><span class="rank">#1</span> TJ Dillashaw vs. <span class="rank">#2</span> John Lineker</li>
+                <li><span class="rank">#9</span> Dong Hyun Kim vs. <span class="rank">#12</span> Tarec Saffiedine</li>
+                <li><span class="rank">#12</span> Louis Smolka vs. <span class="rank">#13</span> Ray Borg</li>
+            </ul>
+            <h2>UFC 207 Prelim Fight Card</h2>
+            <ul class="list" id="prelim-fights">
+                <li><span class="rank">#6</span> Johny Hendricks vs. <span class="rank">#8</span> Neil Magny</li>
+                <li>Antonio Carlos Junior vs. Marvin Vettori</li>
+                <li>Mike Pyle vs. Alex Garcia</li>
+                <li>Brandon Thatch vs. Niko Price</li>
+            </ul>
         </div>
     </div>
-</div>
-<div class="footer">
-    <div id="copyright">Fight Companions.com &copy;2016. Stay tuned for more.</div>
+    <div class="footer">
+        <div id="copyright">Fight Companions.com &copy;2016. Stay tuned for more.</div>
+    </div>
 </div>
 </body>
